taipei san install(all)

--- a/index.html
+++ b/index.html
@@ -141,15 +141,16 @@
   <header class="border-bottom lh-1 py-3">
     <div class="row flex-nowrap justify-content-center align-items-center">
         <div class="col-4 text-center">
-            <a class="blog-header-logo text-body-emphasis text-decoration-none" style="font-family: 'STKaiti', '楷体';">關於我</a>
+            <a class="blog-header-logo text-body-emphasis text-decoration-none" style="font-family: 'Taipei Sans TC B', sans-serif;">關於我</a>
         </div>
     </div>
   </header>
 
 
+
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
-      <a class="nav-item nav-link link-body-emphasis active" href="#">World</a>
+      <a class="nav-item nav-link link-body-emphasis active" style="font-family: 'Taipei Sans TC L', sans-serif;" href="#">專題成果*</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">U.S.</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Technology</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Design</a>
