index.html update

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <header class="border-bottom lh-1 py-3">
     <div class="row flex-nowrap justify-content-center align-items-center">
         <div class="col-4 text-center">
-            <a class="blog-header-logo text-body-emphasis text-decoration-none" style="font-family: 'Taipei Sans TC B', sans-serif;">關於我</a>
+            <a class="blog-header-logo text-body-emphasis text-decoration-none" style="font-family: 'Taipei Sans TC-B', sans-serif;">關於我</a>
         </div>
     </div>
   </header>
@@ -150,10 +150,10 @@
 
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
-      <a class="nav-item nav-link link-body-emphasis active" style="font-family: 'Taipei Sans TC L', sans-serif;" href="#">專題成果*</a>
-      <a class="nav-item nav-link link-body-emphasis" href="#">U.S.</a>
-      <a class="nav-item nav-link link-body-emphasis" href="#">Technology</a>
-      <a class="nav-item nav-link link-body-emphasis" href="#">Design</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="#">專題成果*</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://webdesignfinalproject1112.github.io/webdesign-website/">網際網路程式設計</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://www.tahrd.ntnu.edu.tw/">系所資訊</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://github.com/mason45ok/DB">資料庫系統</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Culture</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Business</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
@@ -169,9 +169,9 @@
 <main class="container">
   <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
     <div class="col-lg-6 px-0">
-      <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-      <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+      <h1 class="display-4 fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">自我介紹</h1>
+      <p class="lead my-3" style="font-family: 'Taipei Sans TC-R', sans-serif;">身為一個土生土長的台北人<br>即使上了大學也沒能離開台北的懷抱<br>都市林立的大樓並不阻擋對我對新知的熱情!<br>大學生涯中所學都展示於本網頁中</p>
+      <p class="lead mb-0"><a href="https://www.instagram.com/mason45ok/" class="text-body-emphasis fw-bold">未完待續...</a></p>
     </div>
   </div>
 
@@ -179,9 +179,9 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
-          <h3 class="mb-0">Featured post</h3>
-          <div class="mb-1 text-body-secondary">Nov 12</div>
+          <strong class="d-inline-block mb-2 text-primary-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;">網際網路程式設計</strong>
+          <h3 class="mb-0" style="font-family: 'Taipei Sans TC-B', sans-serif;">專題:吃甚麼?</h3>
+          <div class="mb-1 text-body-secondary">Jun 8 2023 </div>
           <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
           <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
             Continue reading
