--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="#">專題成果*</a>
-      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://webdesignfinalproject1112.github.io/webdesign-website/">網際網路程式設計</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://github.com/WebDesignfinalproject1112/webdesign-website">網際網路程式設計</a>
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://www.tahrd.ntnu.edu.tw/">系所資訊</a>
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://github.com/mason45ok/DB">資料庫系統</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Culture</a>
@@ -170,7 +170,7 @@
   <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
     <div class="col-lg-6 px-0">
       <h1 class="display-4 fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">自我介紹</h1>
-      <p class="lead my-3" style="font-family: 'Taipei Sans TC-R', sans-serif;">身為一個土生土長的台北人<br>即使上了大學也沒能離開台北的懷抱<br>都市林立的大樓並不阻擋對我對新知的熱情!<br>大學生涯中所學都展示於本網頁中</p>
+      <p class="lead my-3" style="font-family: 'Taipei Sans TC-R', sans-serif;">身為一個土生土長的台北人<br>即使上了大學也沒能離開台北的懷抱<br>都市林立的大樓並不阻擋對我對新知的熱情!<br>大學生涯中所學都將展示於本網頁中</p>
       <p class="lead mb-0"><a href="https://www.instagram.com/mason45ok/" class="text-body-emphasis fw-bold">未完待續...</a></p>
     </div>
   </div>
@@ -182,8 +182,8 @@
           <strong class="d-inline-block mb-2 text-primary-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;">網際網路程式設計</strong>
           <h3 class="mb-0" style="font-family: 'Taipei Sans TC-B', sans-serif;">專題:吃甚麼?</h3>
           <div class="mb-1 text-body-secondary">Jun 8 2023 </div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+          <p class="card-text mb-auto" style="font-family: 'Taipei Sans TC-R', sans-serif;">本專題是考慮到「不知道吃甚麼」而設計<br>尤其針對師大學生更是如此<br>因此希望解決「吃甚麼?」的問題</p>
+          <a href="https://webdesignfinalproject1112.github.io/webdesign-website/" class="icon-link gap-1 icon-link-hover stretched-link">
             Continue reading
             <svg class="bi"><use xlink:href="#chevron-right"/></svg>
           </a>
