更改圖片比例

--- a/index.html
+++ b/index.html
@@ -189,24 +189,24 @@
           </a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <img class="bd-placeholder-img" width="200" height="250" src="img/吃甚麼.jpeg">
         </div>
       </div>
     </div>
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success-emphasis">Design</strong>
-          <h3 class="mb-0">Post title</h3>
-          <div class="mb-1 text-body-secondary">Nov 11</div>
-          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+          <strong class="d-inline-block mb-2 text-success-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;">資料庫系統</strong>
+          <h3 class="mb-0" style="font-family: 'Taipei Sans TC-B', sans-serif;">專題*</h3>
+          <div class="mb-1 text-body-secondary">Dec 25 2023</div>
+          <p class="mb-auto" style="font-family: 'Taipei Sans TC-R', sans-serif;">本專題尚未完成/定案</p>
+          <a href="https://webdesignfinalproject1112.github.io/webdesign-website/" class="icon-link gap-1 icon-link-hover stretched-link">
             Continue reading
             <svg class="bi"><use xlink:href="#chevron-right"/></svg>
           </a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <img class="bd-placeholder-img" width="200" height="250" src="img/吃甚麼.jpeg">
         </div>
       </div>
     </div>
