--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <h2 class="display-5 link-body-emphasis mb-1" style="font-family: 'Taipei Sans TC-B', sans-serif;">基本資料</h2>
         <p class="blog-post-meta">September 13, 2023 by <a href="https://www.instagram.com/mason45ok/">Mason</a></p>
 
-        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">本人畢業於麗山高中，目前正就讀於國立臺灣師範大學的科技應用與人力資源發產學系的2年級，</p>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">本人畢業於麗山高中，目前正就讀於國立臺灣師範大學的科技應用與人力資源發展學系的2年級，</p>
         <hr>
         <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
         <h2>Blockquotes</h2>
