--- a/index.html
+++ b/index.html
@@ -150,18 +150,18 @@
 
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
-      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="#">專題成果*</a>
-      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://github.com/WebDesignfinalproject1112/webdesign-website">網際網路程式設計</a>
-      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://www.tahrd.ntnu.edu.tw/">系所資訊</a>
-      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://github.com/mason45ok/DB">資料庫系統</a>
-      <a class="nav-item nav-link link-body-emphasis" href="#">Culture</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="#">專題成果*</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://github.com/WebDesignfinalproject1112/webdesign-website">網際網路程式設計</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://www.tahrd.ntnu.edu.tw/">系所資訊</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://github.com/mason45ok/DB">資料庫系統</a>
+      <!-- <a class="nav-item nav-link link-body-emphasis" href="#">Culture</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Business</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Opinion</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Health</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Style</a>
-      <a class="nav-item nav-link link-body-emphasis" href="#">Travel</a>
+      <a class="nav-item nav-link link-body-emphasis" href="#">Travel</a> -->
     </nav>
   </div>
 </div>
@@ -222,15 +222,16 @@
         <h2 class="display-5 link-body-emphasis mb-1" style="font-family: 'Taipei Sans TC-B', sans-serif;">基本資料</h2>
         <p class="blog-post-meta">September 13, 2023 by <a href="https://www.instagram.com/mason45ok/">Mason</a></p>
 
-        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">本人畢業於麗山高中，目前正就讀於國立臺灣師範大學的科技應用與人力資源發展學系的2年級，</p>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">本人畢業於麗山高中，目前正就讀於國立臺灣師範大學的科技應用與人力資源發展學系的2年級，在大學中我期望自己學習到關於教育相關的技能，此外也希望能透過程式能力使自身不被時代所拋棄</p>
         <hr>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <h2>Blockquotes</h2>
-        <p>This is an example blockquote in action:</p>
-        <blockquote class="blockquote">
-          <p>Quoted text goes here.</p>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">教育相關的內容中，我目前正修習教育心理學、教育社會學兩門教程的必修科目，未來下學期希望修過班級經營，發展心理學等課程，希望對未來的職涯發展有正向的幫助</p>
+        <h2 style="font-family: 'Taipei Sans TC-B', sans-serif;">日本交流</h2>
+        <blockquote class="blockquote" style="font-family: 'Taipei Sans TC-R', sans-serif;">
+          <p>拓展國際視野</p>
         </blockquote>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">日本交流我認為是目前大學生涯中十分重要的經驗，交流過程中參訪千葉大學，認知他們是如何設計國小學生的英語課本，在日本的課綱中，三四年級並沒有英語相關的正課時數，只有英語活動時間，五六年級開始才有正式的英語時間，所以他們設計的英文課本相對於台灣的同年級課本有更多母語，單字量和文法也都盡可能向日常生活併攏</p>
+        <hr>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">此外在此次交流中，我們還有去高崎教學當地的農大二高的高中生，讓他們接觸機械手臂的課程，過程中能感受到除了語言問題外，大部分學生對於程式、組裝、操控等項目都能良好吸收，並且他們對本次教學活動大多都給予不錯的評價，此見科技領域的教學也是很有必要的</p>
         <h3>Example lists</h3>
         <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
         <ul>
@@ -245,7 +246,7 @@
           <li>Third list item to close it out</li>
         </ol>
         <p>And this is a definition list:</p>
-        <dl>
+        <!-- <dl>
           <dt>HyperText Markup Language (HTML)</dt>
           <dd>The language used to describe and define the content of a Web page</dd>
           <dt>Cascading Style Sheets (CSS)</dt>
@@ -263,16 +264,16 @@
           <li><del>Deleted</del> text should use <code class="language-plaintext highlighter-rouge">&lt;del&gt;</code> and <ins>inserted</ins> text should use <code class="language-plaintext highlighter-rouge">&lt;ins&gt;</code>.</li>
           <li>Superscript <sup>text</sup> uses <code class="language-plaintext highlighter-rouge">&lt;sup&gt;</code> and subscript <sub>text</sub> uses <code class="language-plaintext highlighter-rouge">&lt;sub&gt;</code>.</li>
         </ul>
-        <p>Most of these elements are styled by browsers with few modifications on our part.</p>
-        <h2>Heading</h2>
+        <p>Most of these elements are styled by browsers with few modifications on our part.</p> -->
+        <!-- <h2>Heading</h2>
         <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
         <h3>Sub-heading</h3>
         <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
         <pre><code>Example code block</code></pre>
         <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-      </article>
+      </article> -->
 
-      <article class="blog-post">
+      <!-- <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1">Another blog post</h2>
         <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
 
@@ -336,14 +337,14 @@
       <nav class="blog-pagination" aria-label="Pagination">
         <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
         <a class="btn btn-outline-secondary rounded-pill disabled" aria-disabled="true">Newer</a>
-      </nav>
+      </nav> -->
 
     </div>
 
     <div class="col-md-4">
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-body-tertiary rounded">
-          <h4 class="fst-italic">About</h4>
+          <h4 class="fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">簡介</h4>
           <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
         </div>
 
@@ -380,7 +381,7 @@
           </ul>
         </div>
 
-        <div class="p-4">
+        <!-- <div class="p-4">
           <h4 class="fst-italic">Archives</h4>
           <ol class="list-unstyled mb-0">
             <li><a href="#">March 2021</a></li>
@@ -396,14 +397,14 @@
             <li><a href="#">May 2020</a></li>
             <li><a href="#">April 2020</a></li>
           </ol>
-        </div>
+        </div> -->
 
         <div class="p-4">
-          <h4 class="fst-italic">Elsewhere</h4>
+          <h4 class="fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">社群連結</h4>
           <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="https://github.com/mason45ok">GitHub</a></li>
+            <li><a href="https://www.instagram.com/mason45ok/">instagram</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100013685703603">Facebook</a></li>
           </ol>
         </div>
       </div>
@@ -413,9 +414,9 @@
 </main>
 
 <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p>Blog template built from <a href="https://getbootstrap.com/">Bootstrap</a> rewrite by <a href="https://www.instagram.com/mason45ok/">@mason45ok</a>.</p>
   <p class="mb-0">
-    <a href="#">Back to top</a>
+    <a href="#" style="font-family: 'Taipei Sans TC-B', sans-serif;">回到頂端</a>
   </p>
 </footer>
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
