--- a/index.html
+++ b/index.html
@@ -232,20 +232,17 @@
         <p style="font-family: 'Taipei Sans TC-L', sans-serif;">日本交流我認為是目前大學生涯中十分重要的經驗，交流過程中參訪千葉大學，認知他們是如何設計國小學生的英語課本，在日本的課綱中，三四年級並沒有英語相關的正課時數，只有英語活動時間，五六年級開始才有正式的英語時間，所以他們設計的英文課本相對於台灣的同年級課本有更多母語，單字量和文法也都盡可能向日常生活併攏</p>
         <hr>
         <p style="font-family: 'Taipei Sans TC-L', sans-serif;">此外在此次交流中，我們還有去高崎教學當地的農大二高的高中生，讓他們接觸機械手臂的課程，過程中能感受到除了語言問題外，大部分學生對於程式、組裝、操控等項目都能良好吸收，並且他們對本次教學活動大多都給予不錯的評價，此見科技領域的教學也是很有必要的</p>
-        <h3>Example lists</h3>
-        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
+        <h3 style="font-family: 'Taipei Sans TC-B', sans-serif;">資訊能力</h3>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">我認為不落伍的方式就是增加自己的資訊能力，所以在大學生活中修習更多能培養資訊能力的課程:</p>
         <ul>
-          <li>First list item</li>
-          <li>Second list item with a longer description</li>
-          <li>Third list item to close it out</li>
+          <li style="font-family: 'Taipei Sans TC-L', sans-serif;">資料庫系統</li>
+          <li style="font-family: 'Taipei Sans TC-L', sans-serif;">程式設計(一)</li>
+          <li style="font-family: 'Taipei Sans TC-L', sans-serif;">網際網路程式設計</li>
+          <li style="font-family: 'Taipei Sans TC-L', sans-serif;">網際網路概論</li>
+          <li style="font-family: 'Taipei Sans TC-L', sans-serif;">程式語言</li>
+          <li style="font-family: 'Taipei Sans TC-L', sans-serif;">大數據程式設計</li>
         </ul>
-        <p>And this is an ordered list:</p>
-        <ol>
-          <li>First list item</li>
-          <li>Second list item with a longer description</li>
-          <li>Third list item to close it out</li>
-        </ol>
-        <p>And this is a definition list:</p>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">修過課後，我認為自己的程式能力有進一步的成長</p>
         <!-- <dl>
           <dt>HyperText Markup Language (HTML)</dt>
           <dd>The language used to describe and define the content of a Web page</dd>
@@ -345,7 +342,7 @@
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-body-tertiary rounded">
           <h4 class="fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">簡介</h4>
-          <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+          <p class="mb-0" class="fst-italic" style="font-family: 'Taipei Sans TC-L', sans-serif;">本網頁是李騰騏的自我介紹頁，同時也是HTML語法的練習<br>基本資料:畢業於麗山高中<br>目前正就讀於國立臺灣師範大學的科技應用與人力資源發展學系的2年級</p>
         </div>
 
         <div>
