完成自介網頁

--- a/index.html
+++ b/index.html
@@ -346,32 +346,32 @@
         </div>
 
         <div>
-          <h4 class="fst-italic">Recent posts</h4>
+          <h4 class="fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">最新消息</h4>
           <ul class="list-unstyled">
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://www.tahrd.ntnu.edu.tw/">
+                <img src="img/National_Taiwan_Normal_University_logo.svg.png" width="96" height="96" alt="Placeholder Image">
                 <div class="col-lg-8">
-                  <h6 class="mb-0">Example blog post title</h6>
-                  <small class="text-body-secondary">January 15, 2023</small>
+                  <h6 class="mb-0" style="font-family: 'Taipei Sans TC-R', sans-serif;">系所資訊</h6>
+                  <small class="text-body-secondary">September 14, 2023</small>
                 </div>
               </a>
             </li>
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://github.com/mason45ok">
+                <img src="social.ico" width="96" height="96" alt="Placeholder Image">
                 <div class="col-lg-8">
-                  <h6 class="mb-0">This is another blog post title</h6>
-                  <small class="text-body-secondary">January 14, 2023</small>
+                  <h6 class="mb-0" style="font-family: 'Taipei Sans TC-R', sans-serif;">我的Github</h6>
+                  <small class="text-body-secondary">September 14, 2023</small>
                 </div>
               </a>
             </li>
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://webdesignfinalproject1112.github.io/webdesign-website/">
+                <img src="img/吃甚麼.jpeg" width="96" height="96" alt="Placeholder Image">
                 <div class="col-lg-8">
-                  <h6 class="mb-0">Longer blog post title: This one has multiple lines!</h6>
-                  <small class="text-body-secondary">January 13, 2023</small>
+                  <h6 class="mb-0" style="font-family: 'Taipei Sans TC-R', sans-serif;">專題成果</h6>
+                  <small class="text-body-secondary">September 14, 2023</small>
                 </div>
               </a>
             </li>
