--- a/index.html
+++ b/index.html
@@ -349,11 +349,11 @@
           <h4 class="fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">最新消息</h4>
           <ul class="list-unstyled">
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://www.tahrd.ntnu.edu.tw/">
-                <img src="img/National_Taiwan_Normal_University_logo.svg.png" width="96" height="96" alt="Placeholder Image">
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://reurl.cc/v6e3RN">
+                <img src="img/medium.png" width="96" height="96" alt="Placeholder Image">
                 <div class="col-lg-8">
-                  <h6 class="mb-0" style="font-family: 'Taipei Sans TC-R', sans-serif;">系所資訊</h6>
-                  <small class="text-body-secondary">September 14, 2023</small>
+                  <h6 class="mb-0" style="font-family: 'Taipei Sans TC-R', sans-serif;">我的medium</h6>
+                  <small class="text-body-secondary">September 19, 2023</small>
                 </div>
               </a>
             </li>
