--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-body-tertiary rounded">
           <h4 class="fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">簡介</h4>
-          <p class="mb-0" class="fst-italic" style="font-family: 'Taipei Sans TC-L', sans-serif;">本網頁是李騰騏的自我介紹頁，同時也是HTML語法的練習<br>基本資料:畢業於麗山高中<br>目前正就讀於國立臺灣師範大學的科技應用與人力資源發展學系的2年級</p>
+          <p class="mb-0" class="fst-italic" style="font-family: 'Taipei Sans TC-L', sans-serif;">本網頁是李騰騏的自我介紹頁，同時也是HTML語法的練習<br>基本資料:畢業於麗山高中<br>目前正就讀於國立臺灣師範大學<br>科技應用與人力資源發展學系2年級</p>
         </div>
 
         <div>
