--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <h4 class="fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">最新消息</h4>
           <ul class="list-unstyled">
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://reurl.cc/v6e3RN">
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://medium.com/@mason45ok">
                 <img src="img/medium.png" width="96" height="96" alt="Placeholder Image">
                 <div class="col-lg-8">
                   <h6 class="mb-0" style="font-family: 'Taipei Sans TC-R', sans-serif;">我的medium</h6>
