--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://github.com/WebDesignfinalproject1112/webdesign-website">網際網路程式設計</a>
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://www.tahrd.ntnu.edu.tw/">系所資訊</a>
       <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://github.com/mason45ok/DB">資料庫系統</a>
-      <!-- <a class="nav-item nav-link link-body-emphasis" href="#">Culture</a>
-      <a class="nav-item nav-link link-body-emphasis" href="#">Business</a>
+      <a class="nav-item nav-link link-body-emphasis" style="font-family: 'Taipei Sans TC-B', sans-serif;" href="https://medium.com/@mason45ok">我的medium</a>
+      <!-- <a class="nav-item nav-link link-body-emphasis" href="#">Business</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Politics</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Opinion</a>
       <a class="nav-item nav-link link-body-emphasis" href="#">Science</a>
