--- a/index.html
+++ b/index.html
@@ -215,9 +215,11 @@
   <div class="row g-5">
     <div class="col-md-8">
       <h3 class="pb-4 mb-4 fst-italic border-bottom" style="font-family: 'Taipei Sans TC-B', sans-serif;">
-        我的自傳
+        <a href="about.html" style="color: inherit;">
+            我的自傳
+        </a>
       </h3>
-
+    
       <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1" style="font-family: 'Taipei Sans TC-B', sans-serif;">基本資料</h2>
         <p class="blog-post-meta">September 13, 2023 by <a href="https://www.instagram.com/mason45ok/">Mason</a></p>
