新頁面更新

--- a/about.html
+++ b/about.html
@@ -200,9 +200,9 @@
         <img class="responsive-img" src="img/背景.jpg" alt="Your Image">
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <h1 style="font-family: 'Taipei Sans TC-B', sans-serif;">網誌</h1>
+            <p class="opacity-75" style="font-family: 'Taipei Sans TC-R', sans-serif;">我希望未來我能養成不時寫作網誌的習慣<br>分享我對事物的小小見聞</p>
+            <p><a class="btn btn-lg btn-primary" style="font-family: 'Taipei Sans TC-R', sans-serif;" href="https://medium.com/@mason45ok">網誌在此</a></p>
           </div>
         </div>
       </div>
@@ -247,19 +247,20 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/點子.jpg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <h2 class="fw-normal" style="font-family: 'Taipei Sans TC-R', sans-serif;">技能</h2>
+        <p style="font-family: 'Taipei Sans TC-R', sans-serif;">目前學過關於程式設計的技能有</p>
+        <p style="font-family: 'Taipei Sans TC-L', sans-serif;">python、HTML、C++</p>
+        <p><a class="btn btn-secondary" style="font-family: 'Taipei Sans TC-L', sans-serif;" href="https://www.w3schools.com/">前往w3schools &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/興趣.jpg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <h2 class="fw-normal" style="font-family: 'Taipei Sans TC-R', sans-serif;">興趣</h2>
+        <p style="font-family: 'Taipei Sans TC-R', sans-serif;">我的興趣和大多數人相同<br>喜歡排球、騎車跟探索城市的角落<br>目前也是系學會的一員</p>
+        <p><a class="btn btn-secondary" style="font-family: 'Taipei Sans TC-L', sans-serif;" href="https://www.instagram.com/ntnu_tahrd/?theme=dark">系學會IG &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/定位.jpg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
         <h2 class="fw-normal">Heading</h2>
         <p>And lastly this, the third column of representative placeholder content.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
