--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/點子.jpg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/點子.png" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
         <h2 class="fw-normal" style="font-family: 'Taipei Sans TC-R', sans-serif;">技能</h2>
         <p style="font-family: 'Taipei Sans TC-R', sans-serif;">目前學過關於程式設計的技能有</p>
         <p style="font-family: 'Taipei Sans TC-L', sans-serif;">python、HTML、C++</p>
@@ -260,8 +260,8 @@
         <p><a class="btn btn-secondary" style="font-family: 'Taipei Sans TC-L', sans-serif;" href="https://www.instagram.com/ntnu_tahrd/?theme=dark">系學會IG &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/定位.jpg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
-        <h2 class="fw-normal">Heading</h2>
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/定位.png" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+        <h2 class="fw-normal" style="font-family: 'Taipei Sans TC-R', sans-serif;">定位</h2>
         <p>And lastly this, the third column of representative placeholder content.</p>
         <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
