--- a/about.html
+++ b/about.html
@@ -278,7 +278,7 @@
         <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img class="bd-placeholder-img" width="375" height="500" src="img/自己.jpg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false" style="margin-left: 75px;">
       </div>
     </div>
 
