--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <main class="container">
   <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
     <div class="col-lg-6 px-0">
-      <h1 class="display-4 fst-italic" style="font-family: 'Taipei Sans TC-B', sans-serif;">自我介紹</h1>
+      <h1 class="display-4 " style="font-family: 'Taipei Sans TC-B', sans-serif;">自我介紹</h1>
       <p class="lead my-3" style="font-family: 'Taipei Sans TC-R', sans-serif;">身為一個土生土長的台北人<br>即使上了大學也沒能離開台北的懷抱<br>都市林立的大樓並不阻擋對我對新知的熱情!<br>大學生涯中所學都將展示於本網頁中</p>
       <p class="lead mb-0"><a href="about.html" class="text-body-emphasis fw-bold">未完待續...</a></p>
     </div>
